--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,9 @@
     <string name="create_board_title">Create Board</string>
     <string name="create">CREATE</string>
     <string name="board_name">Board Name</string>
+
+    <string name="no_board_available">No Boards are available</string>
+    <string name="action_add_list">Add List</string>
+    <string name="action_add_card">Add Card</string>
+    <string name="list_name">List name</string>
 </resources>
