--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,12 @@
     <string name="add">ADD</string>
     <string name="search_member">Add Member</string>
 
+    <string name="label_color">Label Color</string>
+    <string name="select_color">Select Color</string>
+    <string name="select_member">Select Member</string>
+    <string name="due_date">Due Date</string>
+    <string name="select_due_date">Select Due Date</string>
+    <string name="hint_card_name">Card name</string>
+    <string name="delete_card">Delete Card</string>
 
 </resources>
